# pups_team

./: .gitignore
backend/: pyproject.toml
backend/src/: __main__.py
backend/src/clients_app/: create_app.py  settings.py
backend/src/clients_app/api/v1/clients/: core.py  views.py
ml_model/: model.ipynb
parser/: main.py
react-hakaton/: package-lock.json  package.json
react-hakaton/src/: App.jsx  index.css
react-hakaton/src/components/: LineChart.jsx  PieChart.jsx
react-hakaton/src/service/: date-service.js
