[tool.poetry]
name = "psb_project"
version = "0.1.0"
description = ""
authors = ["silverfatt <silvestr.fat@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
clickhouse-driver = "^0.2.9"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
loguru = "^0.7.3"
pydantic-settings = "^2.7.0"
pandas = "^2.2.3"
asyncpg = "^0.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
